fixing text alignment on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -71,7 +71,7 @@ h4 {
     h3 {
         font-size: 28px;
         margin: 15px;
-        text-align: center;
+        text-align: left;
         /* margin-top: 15px; */
     }
 
